# x5-ml-service

./: README.md  custom_logger.py  llm_engine.py  main.py  model_engine.py  pyproject.toml  schemas.py
tests/: input_sample.json
